# composer-agent

./: .gitignore  LICENSE  README.md
apps/agents/: .gitignore  deploy_agentengine.py  pyproject.toml
apps/agents/composer/: agent.py  agentengine.py  prompts.py
apps/agents/composer/schema/: base.py  music_plan.py
apps/agents/composer/sub_agents/composer/: agent.py  prompts.py  tools.py
apps/agents/composer/sub_agents/long_composer/: agent.py  prompts.py
apps/agents/composer/utils/: audio.py
apps/agents/installation_scripts/: install.sh
apps/chatui/: .dockerignore  .env.example  Dockerfile  chainlit.md  chainlit_ja.md  main.py  pyproject.toml
apps/chatui/.chainlit/: config.toml
apps/chatui/.chainlit/translations/: ja.json
apps/chatui/chatui/: settings.py
apps/chatui/chatui/schema/: __init__.py  base.py  state.py
apps/chatui/chatui/services/: chat_api.py
apps/chatui/chatui/utils/: httpx_auth.py
apps/chatui/scripts/: run.sh
