[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.14.1",
    "google-cloud-aiplatform[adk,agent-engines]>=1.112.0",
    "google-cloud-logging>=3.12.1",
    "google-genai>=1.37.0",
    "pydub>=0.25.1",
]
